--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --ext .js,ejs,json,html --watch . --watch views --watch public app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -27,10 +27,15 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "nodemailer": "^6.9.3",
+    "sqlite3": "^5.1.7-rc.0",
     "uuid": "^9.0.0",
     "wpapi": "^1.2.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "chai": "^5.0.0",
+    "cheerio": "^1.0.0-rc.12",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
