--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
+DB_HOST=sql8.freemysqlhosting.net
 DB_PORT=3306
-DB_USER=root
-DB_PASS=rexali
-DB_NAME=waqfcrowd
+DB_USER=sql8742131
+DB_PASS=APhB3SZYeI
+DB_NAME=sql8742131
 SECRET_KEY=asdfghjkil
 SECRET_PART=asdfghjkil
 SECRET=sk_live_036415ba91aa000671b5a76c3220dafb5812e26d
